--- a/style.css
+++ b/style.css
@@ -10,10 +10,10 @@ body{
     box-sizing: border-box;
     /* width: 95vw; */
 }
- h2{
+ .h2{
     font-size: 2em;
 }
- h2 span{
+.h2 span{
     color: #E14949;
 }
 button{
@@ -320,6 +320,110 @@ footer .social-logo{
 }
 
 
+/* box of any product details  */
+.detailBox{
+    position: fixed;
+    background-color: rgba(249, 249, 249, 0.7);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    padding-top: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+}
+.visiblite{
+    visibility: visible;
+}
+.detailBox .content{
+    box-shadow: inset 0 0 1px 0 rgba(0, 0, 0, 0.5), 0 0 1px 0 rgba(0, 0, 0, 0.5);
+    background-color: white;
+    overflow-y: scroll;
+    height: 80%;
+    width: 60%;
+    position: relative;
+}
+.detailBox .content i{
+    position: absolute;
+    color: white;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-right: 10px;
+    right: 0;
+    cursor: pointer;
+}
+.detailBox .content i:hover{
+    color: #E14949;
+}
+.detailBox .content::-webkit-scrollbar{
+    display: none;
+}
+.detailBox .content img{
+    width: 100%;
+    height: 100%;
+}
+.detailBox .content .info{
+    padding-left: 10px;
+}
+.detailBox .content .info h1{
+    font-size: 3em;
+}
+.detailBox .content .info p{
+    color: gray;
+}
+.detailBox .content .info .details{
+    margin-block: 5%;
+}
+
+
+.detailBox1{
+    position: fixed;
+    background-color: rgba(249, 249, 249, 0.7);
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 100;
+    padding-top: 5%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    visibility: hidden;
+}
+
+.detailBox1 .content{
+    box-shadow: inset 0 0 1px 0 rgba(255, 255, 255, 0.5), 0 0 1px 0 rgba(255, 255, 255, 0.5);
+    background-color: black;
+    /* overflow-y: scroll; */
+    margin-top: 40px;
+    height: 80%;
+    width: 60%;
+    position: relative;
+}
+.detailBox1 .content video{
+    width: 100%;
+    height: 100%;
+}
+.detailBox1 .content i{
+    position: absolute;
+    z-index: 200;
+    color: white;
+    font-size: 20px;
+    margin-top: 10px;
+    margin-right: 10px;
+    right: 0;
+    cursor: pointer;
+}
+.detailBox1 .content i:hover{
+    color: #E14949;
+}
+.visiblite1{
+    visibility: visible;
+}
+
 @media (min-width:550px) and (max-width:938px) {
     nav{
         flex-direction: column;
@@ -420,7 +524,15 @@ footer .social-logo{
     .section-5 .form .formIcon .myDetails div{
         width: 20%;
     }
- 
+    /* section 5 end there  */
+    .detailBox .content{
+        height: 70%;
+        width: 80%;
+    }
+    .detailBox1 .content{
+        height: 70%;
+        width: 80%;
+    }
 }
 
 @media only screen and (max-width : 550px){
@@ -497,6 +609,7 @@ footer .social-logo{
     .section-3  .Images{
         width: 100%;
     }
+
         /* section 4 start from here  */
     .section-4{
         width: 100%;
@@ -524,7 +637,7 @@ footer .social-logo{
         width: 90%;
     }
       /* section 5 code  */
-      .section-5 .form{
+    .section-5 .form{
         display: flex;
         flex-direction: column;
     }
@@ -539,7 +652,6 @@ footer .social-logo{
         font-size: 14px;
         text-align: center;
     }
-   
     footer h1{
         font-size: 20px;
     }
@@ -548,5 +660,14 @@ footer .social-logo{
         flex: 2;
         gap: 20%;
         justify-content: flex-start;
+    }
+    /* footer end  */
+    .detailBox .content{
+        height: 50%;
+        width: 90%;
+    }
+    .detailBox1 .content{
+        height: 70%;
+        width: 80%;
     }
 }
