--- a/style.css
+++ b/style.css
@@ -302,6 +302,7 @@ footer{
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    position: relative;
   }
   
   
@@ -312,7 +313,8 @@ footer div{
     align-items: center;
 }
 #child{
-    height: 50%;
+    /* height: 50%; */
+    flex: 1;
     width: 100%;
 }
 footer .logo{
@@ -427,6 +429,37 @@ footer .social-logo{
 .visiblite1{
     visibility: visible;
 }
+
+footer .water_wave {
+    flex: 2;
+    position: relative;
+    width: 100%;
+}
+footer .water_wave .wave{
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 100px;
+    background-image: url('../wave.png');
+    background-size:  1000px 100px;
+  }
+footer .water_wave .wave.wave1{
+    animation: animate 3s linear infinite;
+    z-index: 100;
+    opacity: 1;
+    animation-delay: 0s;
+    bottom: 0;
+  }
+  @keyframes animate {
+    0%{
+      background-position-x: 0;
+    }
+    100%{
+      background-position-x: 1000px;
+    }
+  }
+
 
 @media (min-width:550px) and (max-width:938px) {
     nav{
